Ajout signature et responsive

--- a/index.html
+++ b/index.html
@@ -10,20 +10,14 @@
 
 <body>
     <header>
-        <div class="logo-container">
-            <img src="" alt="">
-        </div>
         <h1>Bienvenue au Master Quizz !</h1>
-        <div class="logo-container">
-            <img src="" alt="">
-        </div>
     </header>
     <main>
         <section id="rules">
             <h3>Les règles</h3>
             <p>Vous allez répondre à une série de 5 questions. Chaque bonne réponse rapporte 1 point.</p>
             <p>Il faudra cliquer sur la réponse que vous pensez être la bonne.</p>
-            <button id="start" type="button">Commencer</button>
+            <button id="start" type="button">Go!</button>
         </section>
         <section id="display">
             <div id="subject"></div>
@@ -40,7 +34,12 @@
         </section>
     </main>
     <footer>
-
+        <div>
+            <div class="logo-container">
+                <img src="./assets/images/Logo.png" alt="">
+            </div>
+            <p>Un quizz créé par le Maître des Jeux.</p>
+        </div>
     </footer>
 
     <script src="./assets/scripts/script.js"></script>
