--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <p id="score"></p>
             <p id="comment"></p>
             <div class="commentImageContainer"></div>
+            <div id="restart"></div>
         </section>
     </main>
     <footer>
